syntax = "proto3";

package github.com.yaien.p2p;
option go_package = "./p2p";


service P2P {
    rpc State(StateRequest) returns (stream StateResponse);
    rpc Connect(ConnectRequest) returns (ConnectResponse);
    rpc Message(MessageRequest) returns (MessageResponse);
}

message StateRequest {}

message StateResponse {
    State state = 1;
}

message ConnectRequest {
    Peer current = 1;
}

message ConnectResponse {
    State state = 2;
}

message MessageRequest {
    Peer from = 1;
    string subject = 2;
    bytes body = 3;
}

message MessageResponse {
    bytes body = 4;
}

message State {
    Peer current = 1;
    repeated Peer peers = 2;
}

message Peer {
    string id = 1;
    string name = 2;
    string created_at = 3;
    string updated_at = 4;
    string addr = 5;
    string refreshed_at = 6;
}